# meteor-client

./: CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/: FUNDING.yml
apps/client/: package.json  tailwind.config.js  tsconfig.json
apps/client/src/: main.tsx  simpleddp.d.ts
apps/client/src-tauri/src/: main.rs
apps/client/src/components/: icons.tsx  menu.tsx  server-connection.tsx
apps/client/src/hooks/: use-real-shape.ts
apps/client/src/styles/: globals.css
src/: App.tsx  jsoneditor-react.d.ts  simpleddp-plugin-login.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: expand.tsx  home.tsx  icons.tsx  menu.tsx  server-connection.tsx
src/components/aside-view/: index.tsx
src/components/aside-view/dialogs/: add-collection.tsx  add-folder.tsx  remove-item.tsx
src/components/closeable-tabs/: index.tsx  ingredients.ts  tab.tsx
src/components/ddp-client/: arguments.tsx  ddp-endpoint.tsx  method-response.tsx
src/components/endpoint-view/: index.tsx
src/components/json-editor/: styles.css
src/components/layout/: index.tsx
src/components/loading-dots/: index.tsx
src/components/ui/: button.tsx  form.tsx  input.tsx  label.tsx  sheet.tsx
src/components/ui/tree/: context.ts  file.tsx  (+3 more)
src/hooks/: use-debounce.ts
src/hooks/use-debounce/: use-debounce-callback.ts
src/lib/: utils.ts
src/lib/react-tabs/: index.js  types.ts
src/recoil/connections/: atoms.ts  dispatcher.ts  types.ts
src/store/: index.ts  types.ts
src/styles/: globals.css
(+33 files in other folders)
